kubernetes/kube-eagle/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kube-eagle
  namespace: kube-eagle
  labels:
    app: kube-eagle
    app.kubernetes.io/instance: kube-eagle
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_38=Requires ability to read metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-eagle
  template:
    metadata:
      labels:
        app: kube-eagle
      annotations:
        enable.version-checker.io/kube-eagle: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      automountServiceAccountToken: true
      containers:
        - name:
            kube-eagle
            # renovate: datasource=docker depName=registry.arthurvardevanyan.com/homelab/kube-eagle versioning=loose
          image: registry.arthurvardevanyan.com/homelab/kube-eagle:v1.2.17@sha256:3d7a0be88e3867d31f5caac2f2d6f3f7dc1107ae191feac90941719385d6f587
          securityContext:
            # runAsGroup: 11199
            # runAsUser: 11199
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: RuntimeDefault
            privileged: false
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            limits:
              cpu: 100m
              memory: 384Mi
            requests:
              cpu: 50m
              memory: 192Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: http
              scheme: HTTP
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
        - key: node-role.kubernetes.io/control-plane
          effect: NoSchedule
      serviceAccountName: sa-kube-eagle
      serviceAccount: sa-kube-eagle
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      #   runAsUser: 11199
      #   fsGroup: 11199
      schedulerName: default-scheduler
      enableServiceLinks: false
  strategy:
    type: Recreate
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
