kubernetes/kube-eagle/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: kube-eagle
  namespace: kube-eagle
  labels:
    app: kube-eagle
    app.kubernetes.io/instance: kube-eagle
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: kube-eagle
